--- a/clusterpteste/src/app/componentes/add/add.component.html
+++ b/clusterpteste/src/app/componentes/add/add.component.html
@@ -1,39 +1,10 @@
-<p>add works!</p>
 <nav aria-label="breadcrumb">
   <ol class="breadcrumb">
-    <li class="breadcrumb-item active" aria-current="page">Gerenciamento de carros</li>
+    <li class="breadcrumb-item active" aria-current="page">Gerenciamento de Produtos</li>
   </ol>
 </nav>
-<div class="container">
-  <div class="card list-car">
-    <h5 class="card-header">Lista de carros</h5>
-    <div class="card-body">
-      <table class="table">
-          <thead>
-            <tr>
-              <th scope="col">Id</th>
-              <th scope="col">descrição</th>
-              <th scope="col">n_grupo</th>
-              <th scope="col">Ações</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let Clust of Clusts">
-              <td>{{Clust.id}}</td>
-              <td>{{Clust.descricao}}</td>
-              <td>{{Clust.n_grupo}}</td>
-              <td>
-                <button type="button" class="btn btn-warning btn-sm" (click)="editClusts(Clust)">Editar</button>
-                <button type="button" class="btn btn-danger btn-sm ml-1" (click)="deleteClusts(Clust)">Deletar</button>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-    </div>
-  </div>
-
   <div class="card add-car">
-      <h5 class="card-header">Adicionar/Atualizar carro</h5>
+      <h5 class="card-header">Adicionar/Atualizar Produtos</h5>
       <div class="card-body">
           <form id="add-form" (ngSubmit)="f.form.valid && saveClusts(f)" #f="ngForm" novalidate>
             <div class="form-group">
@@ -51,9 +22,9 @@
                 </div>
             </div>
 
-            <button type="submit" class="btn btn-primary btn-add-car">Salvar</button>
-            <button type="reset" class="btn btn-secondary btn-add-car" (click)="cleanForm(f)">Cancelar</button>
+            <button type="submit" class="btn btn-primary s">Salvar</button>
+            <button type="reset" class="btn btn-secondary c" (click)="cleanForm(f)">Cancelar</button>
           </form>
       </div>
     </div>
-</div>
+    <app-input-mat></app-input-mat>
