--- a/src/app/componentes/lista/lista.component.html
+++ b/src/app/componentes/lista/lista.component.html
@@ -1,9 +1,9 @@
 
 
-<div class="container-fluid">
+<div class="container">
 
 	<h2 class="text-center">
-		List of Clients <i class="fa fa-list"></i>
+		Lista de Personas <i class="fa fa-list"></i>
 	</h2>
 
 	<h5 class="text-right">
@@ -88,4 +88,5 @@
 	</div>
 
 </div>
+
 
