--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,25 @@
-<nav class="navbar navbar-expand-lg navbar-light sticky-top navbar-dark bg-info">
-  <a class="navbar-brand" routerLink="/">
-            <img src="https://firebasestorage.googleapis.com/v0/b/seja-eterno.appspot.com/o/LOGO-CLUSTER-SISTEMA-02-e1529690158412.jpg?alt=media&token=7a7bfdc2-83fc-47a1-b14f-6e20acf97fc3" width="230" height="90" class="d-inline-block align-top" alt="" loading="lazy">
+<nav class="navbar navbar-expand-sm  sticky-top navbar-light  bg-light ">
+  <a class="navbar" routerLink="/">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQgAy5Oa6ZLASEHkhXe60SzrCs66L5AoC1qGw&usqp=CAU" width="130" height="45" class="d-inline-block align-top" alt="" loading="lazy">
               </a>
+
               <button class="navbar-toggler" type="button" (click)="isMenuCollapsed = !isMenuCollapsed">
                 &#9776;
               </button>
 
-              <div [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse">
+              <div  [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse " >
+
                 <ul class="navbar-nav mr-auto">
                   <li class="nav-item active">
               <li class="nav-item">
-                <a class="nav-link" [routerLink]="'/produtos'" routerLinkActive="active"(click)="isMenuCollapsed = true">Produtos</a>
+                <a class="nav-link" [routerLink]="'/obrigado'" routerLinkActive="active"(click)="isMenuCollapsed = true">personas</a>
               </li>
             <li class="nav-item">
-              <a class="nav-link"  [routerLink]="'/cadastrar'" routerLinkActive="active"(click)="isMenuCollapsed = true">cadastrar</a>
+              <a class="nav-link"  [routerLink]="'/cadastrar'" routerLinkActive="active"(click)="isMenuCollapsed = true">Gerar Novo</a>
             </li>
           </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Procurar" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Procurar</button>
-          </form>
         </div>
+
         </nav>
 
 <router-outlet></router-outlet>
